tests/res/types/error_assign_undefined_unknown_member.say

type A {
    pub x?;
}

say obj = A();
fn setY(o, v) {
    o.y = v; // error: Invalid index: A doesn't have member "y"
}
setY(obj, true);